@@ -1,17 +1,7 @@
 #!/bin/bash
-echo "" > classpath.txt
-for file in `ls lib`;
-        do echo -n 'lib/' >> classpath.txt;
-        echo -n $file >> classpath.txt;
-        echo -n ':' >> classpath.txt;
-done
-for file in `ls build`;
-	do echo -n 'build/' >> classpath.txt;
-	echo -n $file >> classpath.txt;
-	echo -n ':' >> classpath.txt;
-done
+DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
-export CLASSPATH=$(cat classpath.txt)
-export JAVA_OPTS="${JAVA_OPTS} -DrulePath=data -Dproperty=Xmx2g -DloggerPath=$BUILD_COMMON/test-config/log4j.properties"
-scala $WORDNIK_OPTS $JAVA_CONFIG_OPTIONS $JAVA_OPTS -cp $CLASSPATH "$@"
+export CLASSPATH="$DIR/../target/lib/*:$DIR/../target/*"
+export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
+JAVA_OPTS=$JAVA_OPTS scala -cp $CLASSPATH "$@"
 
